--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,6 @@ install.packages("polarssql", repos = c("https://rpolars.r-universe.dev", getOpt
 
 ```{r}
 library(DBI)
-library(polars) # A bug of polars requires to load polars <https://github.com/pola-rs/r-polars/issues/495>
 
 con <- dbConnect(polarssql::polarssql())
 dbWriteTable(con, "mtcars", mtcars)
@@ -48,6 +47,8 @@ dbWriteTable(con, "mtcars", mtcars)
 # You can fetch all results:
 res <- dbSendQuery(con, "SELECT * FROM mtcars WHERE cyl = 4")
 dbFetch(res)
+
+# Clear the result
 dbClearResult(res)
 
 # Or a chunk at a time
@@ -56,6 +57,7 @@ while (!dbHasCompleted(res)) {
   chunk <- dbFetch(res, n = 5)
   print(nrow(chunk))
 }
+
 # Clear the result
 dbClearResult(res)
 ```
