--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ knitr::opts_chunk$set(
 `{polarssql}` is an experimental DBI-compliant interface to [Polars](https://www.pola.rs/).
 
 Polars is not an actual database, so does not support full `{DBI}` functionality.
-Please check [the Polars User Guild](https://pola-rs.github.io/polars/user-guide/sql/intro/)
+Please check [the Polars User Guide](https://pola-rs.github.io/polars/user-guide/sql/intro/)
 for supported SQL features.
 
 ## Installation
