--- a/README.Rmd
+++ b/README.Rmd
@@ -96,12 +96,9 @@ And, basic supports for `{dbplyr}` is also implemented.
 library(dplyr, warn.conflicts = FALSE)
 
 # Resgister a data.frame to the built-in connection, and query it via dbplyr
-mtcars |>
-  polarssql_register(df = _) |>
-  tbl("df") |>
+tbl_polarssql(mtcars) |>
   filter(cyl == 4) |>
+  arrange(desc(mpg)) |>
+  head(3) |>
   compute()
-
-# Unregister the table
-polarssql_unregister("df")
 ```
